--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -18,15 +18,15 @@
 	"{{COUNT}} words": "{{COUNT}} Wörter",
 	"{{LOCALIZED_DATE}} at {{LOCALIZED_TIME}}": "{{LOCALIZED_DATE}} um {{LOCALIZED_TIME}}",
 	"{{model}} download has been canceled": "Der Download von {{model}} wurde abgebrochen",
-	"{{NAMES}} reacted with {{REACTION}}": "",
+	"{{NAMES}} reacted with {{REACTION}}": "{{NAMES}} haben mit {{REACTION}} reagiert",
 	"{{user}}'s Chats": "{{user}}s Chats",
 	"{{webUIName}} Backend Required": "{{webUIName}}-Backend erforderlich",
 	"*Prompt node ID(s) are required for image generation": "*Prompt-Node-ID(s) sind für die Bildgenerierung erforderlich",
 	"1 Source": "1 Quelle",
-	"A collaboration channel where people join as members": "",
-	"A discussion channel where access is controlled by groups and permissions": "",
+	"A collaboration channel where people join as members": "Ein Kollaborationskanal, dem Personen als Mitglieder beitreten",
+	"A discussion channel where access is controlled by groups and permissions": "Ein Diskussionskanal, dessen Zugriff durch Gruppen und Berechtigungen gesteuert wird",
 	"A new version (v{{LATEST_VERSION}}) is now available.": "Eine neue Version (v{{LATEST_VERSION}}) ist jetzt verfügbar.",
-	"A private conversation between you and selected users": "",
+	"A private conversation between you and selected users": "Eine private Unterhaltung zwischen Ihnen und ausgewählten Benutzern",
 	"A task model is used when performing tasks such as generating titles for chats and web search queries": "Aufgabenmodelle werden beispielsweise zur Generierung von Chat-Titeln oder Websuchanfragen verwendet",
 	"a user": "ein Benutzer",
 	"About": "Über",
@@ -57,8 +57,8 @@
 	"Add Custom Prompt": "Benutzerdefinierten Prompt hinzufügen",
 	"Add Details": "Details hinzufügen",
 	"Add Files": "Dateien hinzufügen",
-	"Add Member": "",
-	"Add Members": "",
+	"Add Member": "Mitglied hinzufügen",
+	"Add Members": "Mitglieder hinzufügen",
 	"Add Memory": "Erinnerung hinzufügen",
 	"Add Model": "Modell hinzufügen",
 	"Add Reaction": "Reaktion hinzufügen",
@@ -257,7 +257,7 @@
 	"Citations": "Zitate",
 	"Clear memory": "Alle Erinnerungen entfernen",
 	"Clear Memory": "Alle Erinnerungen entfernen",
-	"Clear status": "",
+	"Clear status": "Status löschen",
 	"click here": "hier klicken",
 	"Click here for filter guides.": "Klicken Sie hier für Filteranleitungen.",
 	"Click here for help.": "Klicken Sie hier für Hilfe.",
@@ -294,7 +294,7 @@
 	"Code Interpreter": "Code-Interpreter",
 	"Code Interpreter Engine": "Code Interpreter-Engine",
 	"Code Interpreter Prompt Template": "Code Interpreter Prompt Vorlage",
-	"Collaboration channel where people join as members": "",
+	"Collaboration channel where people join as members": "Kollaborationskanal, dem Personen als Mitglieder beitreten",
 	"Collapse": "Zuklappen",
 	"Collection": "Kollektion",
 	"Color": "Farbe",
@@ -454,7 +454,7 @@
 	"Discover, download, and explore custom prompts": "Entdecken und beziehen Sie benutzerdefinierte Prompts",
 	"Discover, download, and explore custom tools": "Entdecken und beziehen Sie benutzerdefinierte Werkzeuge",
 	"Discover, download, and explore model presets": "Entdecken und beziehen Sie benutzerdefinierte Modellvorlagen",
-	"Discussion channel where access is based on groups and permissions": "",
+	"Discussion channel where access is based on groups and permissions": "Diskussionskanal, dessen Zugriff auf Gruppen und Berechtigungen basiert",
 	"Display": "Anzeigen",
 	"Display chat title in tab": "Chat-Titel im Tab anzeigen",
 	"Display Emoji in Call": "Emojis im Anruf anzeigen",
@@ -471,7 +471,7 @@
 	"Document": "Dokument",
 	"Document Intelligence": "Dokumentenintelligenz",
 	"Document Intelligence endpoint required.": "Dokumentenintelligenz-Endpunkt erforderlich.",
-	"Document Intelligence Model": "",
+	"Document Intelligence Model": "Dokomentenintelligenz Modell",
 	"Documentation": "Dokumentation",
 	"Documents": "Dokumente",
 	"does not make any external connections, and your data stays securely on your locally hosted server.": "stellt keine externen Verbindungen her, und Ihre Daten bleiben sicher auf Ihrem lokal gehosteten Server.",
@@ -494,15 +494,15 @@
 	"e.g. \"json\" or a JSON schema": "z. B. \"json\" oder ein JSON-Schema",
 	"e.g. 60": "z. B. 60",
 	"e.g. A filter to remove profanity from text": "z. B. Ein Filter, um Schimpfwörter aus Text zu entfernen",
-	"e.g. about the Roman Empire": "",
+	"e.g. about the Roman Empire": "z.B. über das Römische Reich",
 	"e.g. en": "z. B. en",
 	"e.g. My Filter": "z. B. Mein Filter",
 	"e.g. My Tools": "z. B. Meine Werkzeuge",
 	"e.g. my_filter": "z. B. mein_filter",
 	"e.g. my_tools": "z. B. meine_werkzeuge",
 	"e.g. pdf, docx, txt": "z. B. pdf, docx, txt",
-	"e.g. Tell me a fun fact": "",
-	"e.g. Tell me a fun fact about the Roman Empire": "",
+	"e.g. Tell me a fun fact": "z.B. Erzähl mir eine lustige Tatsache",
+	"e.g. Tell me a fun fact about the Roman Empire": "z.B. Erzähl mir eine lustige Tatsache über das Römische Reich",
 	"e.g. Tools for performing various operations": "z. B. Werkzeuge für verschiedene Operationen",
 	"e.g., 3, 4, 5 (leave blank for default)": "z. B. 3, 4, 5 (leer lassen für Standard)",
 	"e.g., audio/wav,audio/mpeg,video/* (leave blank for defaults)": "z. B. audio/wav,audio/mpeg,video/* (leer lassen für Standardwerte)",
@@ -576,7 +576,7 @@
 	"Enter Docling Server URL": "Docling Server-URL eingeben",
 	"Enter Document Intelligence Endpoint": "Endpunkt für Document Intelligence eingeben",
 	"Enter Document Intelligence Key": "Schlüssel für Document Intelligence eingeben",
-	"Enter Document Intelligence Model": "",
+	"Enter Document Intelligence Model": "Dokumentenintelligenz-Modell eingeben",
 	"Enter domains separated by commas (e.g., example.com,site.org,!excludedsite.com)": "Kommaseparierte Domainnamen eingeben (z.B., erlaubteseite.com,!gesperrteseite.org)",
 	"Enter Exa API Key": "Geben Sie den Exa-API-Schlüssel ein",
 	"Enter External Document Loader API Key": "API-Schlüssel für externen Dokumenten-Loader eingeben",
@@ -716,8 +716,8 @@
 	"External Web Search URL": "Externe Websuche URL",
 	"Fade Effect for Streaming Text": "Überblendeffekt für Text-Streaming",
 	"Failed to add file.": "Fehler beim Hinzufügen der Datei.",
-	"Failed to add members": "",
-	"Failed to clear status": "",
+	"Failed to add members": "Mitglieder konnten nicht hinzugefügt werden",
+	"Failed to clear status": "Status konnte nicht gelöscht werden",
 	"Failed to connect to {{URL}} OpenAPI tool server": "Verbindung zum OpenAPI-Toolserver {{URL}} fehlgeschlagen",
 	"Failed to copy link": "Fehler beim kopieren des Links",
 	"Failed to create API Key.": "Fehler beim Erstellen des API-Schlüssels.",
@@ -731,14 +731,14 @@
 	"Failed to load file content.": "Fehler beim Laden des Dateiinhalts.",
 	"Failed to move chat": "Chat konnte nicht verschoben werden",
 	"Failed to read clipboard contents": "Fehler beim Lesen des Inhalts der Zwischenablage.",
-	"Failed to remove member": "",
+	"Failed to remove member": "Mitglied konnte nicht entfernt werden",
 	"Failed to render diagram": "Diagramm konnte nicht gerendert werden",
 	"Failed to render visualization": "Visualisierung konnte nicht gerendert werden",
 	"Failed to save connections": "Verbindungen konnten nicht gespeichert werden",
 	"Failed to save conversation": "Unterhaltung konnte nicht gespeichert werden",
 	"Failed to save models configuration": "Fehler beim Speichern der Modellkonfiguration",
 	"Failed to update settings": "Fehler beim Aktualisieren der Einstellungen",
-	"Failed to update status": "",
+	"Failed to update status": "Status konnte nicht aktualisiert werden",
 	"Failed to upload file.": "Fehler beim Hochladen der Datei.",
 	"Features": "Funktionalitäten",
 	"Features Permissions": "Funktionen-Berechtigungen",
@@ -832,13 +832,13 @@
 	"Google PSE Engine Id": "Google PSE-Engine-ID",
 	"Gravatar": "Gravatar",
 	"Group": "Gruppe",
-	"Group Channel": "",
+	"Group Channel": "Gruppenkanal",
 	"Group created successfully": "Gruppe erfolgreich erstellt",
 	"Group deleted successfully": "Gruppe erfolgreich gelöscht",
 	"Group Description": "Gruppenbeschreibung",
 	"Group Name": "Gruppenname",
 	"Group updated successfully": "Gruppe erfolgreich aktualisiert",
-	"groups": "",
+	"groups": "Gruppen",
 	"Groups": "Gruppen",
 	"H1": "Überschrift 1",
 	"H2": "Überschrift 2",
@@ -1028,9 +1028,9 @@
 	"MCP": "MCP",
 	"MCP support is experimental and its specification changes often, which can lead to incompatibilities. OpenAPI specification support is directly maintained by the Open WebUI team, making it the more reliable option for compatibility.": "Die MCP-Unterstützung ist experimentell und ihre Spezifikation ändert sich häufig, was zu Inkompatibilitäten führen kann. Die Unterstützung der OpenAPI-Spezifikation wird direkt vom Open‑WebUI‑Team gepflegt und ist daher die verlässlichere Option in Bezug auf Kompatibilität.",
 	"Medium": "Mittel",
-	"Member removed successfully": "",
-	"Members": "",
-	"Members added successfully": "",
+	"Member removed successfully": "Mitglied erfolgreich entfernt",
+	"Members": "Mitglieder",
+	"Members added successfully": "Mitglieder erfolgreich hinzugefügt",
 	"Memories accessible by LLMs will be shown here.": "Erinnerungen, die für Modelle zugänglich sind, werden hier angezeigt.",
 	"Memory": "Erinnerungen",
 	"Memory added successfully": "Erinnerung erfolgreich hinzugefügt",
@@ -1130,7 +1130,7 @@
 	"No models selected": "Keine Modelle ausgewählt",
 	"No Notes": "Keine Notizen",
 	"No notes found": "Keine Notizen gefunden",
-	"No pinned messages": "",
+	"No pinned messages": "Keine angehefteten Nachrichten",
 	"No prompts found": "Keine Prompts gefunden",
 	"No results": "Keine Ergebnisse gefunden",
 	"No results found": "Keine Ergebnisse gefunden",
@@ -1178,7 +1178,7 @@
 	"Only alphanumeric characters and hyphens are allowed in the command string.": "In der Befehlszeichenfolge sind nur alphanumerische Zeichen und Bindestriche erlaubt.",
 	"Only can be triggered when the chat input is in focus.": "Kann nur ausgelöst werden, wenn das Chat-Eingabefeld fokussiert ist.",
 	"Only collections can be edited, create a new knowledge base to edit/add documents.": "Nur Sammlungen können bearbeitet werden. Erstellen Sie eine neue Wissensbasis, um Dokumente zu bearbeiten/hinzuzufügen.",
-	"Only invited users can access": "",
+	"Only invited users can access": "Nur eingeladene Benutzer haben Zugriff",
 	"Only markdown files are allowed": "Nur Markdown-Dateien sind erlaubt",
 	"Only select users and groups with permission can access": "Nur ausgewählte Benutzer und Gruppen mit Berechtigung können darauf zugreifen",
 	"Oops! Looks like the URL is invalid. Please double-check and try again.": "Hoppla! Es scheint, dass die URL ungültig ist. Bitte überprüfen Sie diese und versuchen Sie es erneut.",
@@ -1241,7 +1241,7 @@
 	"Personalization": "Personalisierung",
 	"Pin": "Anheften",
 	"Pinned": "Angeheftet",
-	"Pinned Messages": "",
+	"Pinned Messages": "Angeheftete Nachrichten",
 	"Pioneer insights": "Bahnbrechende Erkenntnisse",
 	"Pipe": "Pipe",
 	"Pipeline deleted successfully": "Pipeline erfolgreich gelöscht",
@@ -1284,7 +1284,7 @@
 	"Previous 7 days": "Vorherige 7 Tage",
 	"Previous message": "Vorherige Nachricht",
 	"Private": "Privat",
-	"Private conversation between selected users": "",
+	"Private conversation between selected users": "Private Unterhaltung zwischen ausgewählten Benutzern",
 	"Profile": "Profil",
 	"Prompt": "Prompt",
 	"Prompt Autocompletion": "Prompt Autovervollständigung",
@@ -1472,7 +1472,7 @@
 	"Set the number of worker threads used for computation. This option controls how many threads are used to process incoming requests concurrently. Increasing this value can improve performance under high concurrency workloads but may also consume more CPU resources.": "Legt die Anzahl der für die Berechnung verwendeten Worker-Threads fest. Diese Option steuert, wie viele Threads zur gleichzeitigen Verarbeitung eingehender Anfragen verwendet werden. Eine Erhöhung dieses Wertes kann die Leistung bei hoher Parallelität verbessern, kann aber mehr CPU-Ressourcen verbrauchen.",
 	"Set Voice": "Stimme festlegen",
 	"Set whisper model": "Whisper-Modell festlegen",
-	"Set your status": "",
+	"Set your status": "Status festlegen",
 	"Sets a flat bias against tokens that have appeared at least once. A higher value (e.g., 1.5) will penalize repetitions more strongly, while a lower value (e.g., 0.9) will be more lenient. At 0, it is disabled.": "Legt einen festen Bias gegen Token fest, die mindestens einmal erschienen sind. Ein höherer Wert (z.\u202fB. 1.5) bestraft Wiederholungen stärker, während ein niedrigerer Wert (z.\u202fB. 0.9) nachsichtiger ist. Bei 0 ist die Funktion deaktiviert.",
 	"Sets a scaling bias against tokens to penalize repetitions, based on how many times they have appeared. A higher value (e.g., 1.5) will penalize repetitions more strongly, while a lower value (e.g., 0.9) will be more lenient. At 0, it is disabled.": "Legt einen skalierenden Bias gegen Token fest, um Wiederholungen basierend auf ihrer Häufigkeit zu bestrafen. Ein höherer Wert (z.\u202fB. 1.5) bestraft Wiederholungen stärker, während ein niedrigerer Wert (z.\u202fB. 0.9) nachsichtiger ist. Bei 0 ist die Funktion deaktiviert.",
 	"Sets how far back for the model to look back to prevent repetition.": "Legt fest, wie weit das Modell zurückblickt, um Wiederholungen zu verhindern.",
@@ -1525,9 +1525,9 @@
 	"Start a new conversation": "Neue Unterhaltung starten",
 	"Start of the channel": "Beginn des Kanals",
 	"Start Tag": "Start-Tag",
-	"Status": "",
-	"Status cleared successfully": "",
-	"Status updated successfully": "",
+	"Status": "Status",
+	"Status cleared successfully": "Status erfolgreich gelöscht",
+	"Status updated successfully": "Status erfolgreich aktualisiert",
 	"Status Updates": "Statusaktualisierungen",
 	"STDOUT/STDERR": "STDOUT/STDERR",
 	"Steps": "Schritte",
@@ -1543,7 +1543,7 @@
 	"STT Model": "STT-Modell",
 	"STT Settings": "STT-Einstellungen",
 	"Stylized PDF Export": "Stilisierter PDF-Export",
-	"Subtitle": "",
+	"Subtitle": "Untertitel",
 	"Success": "Erfolg",
 	"Successfully imported {{userCount}} users.": "Erfolgreich {{userCount}} Benutzer importiert.",
 	"Successfully updated.": "Erfolgreich aktualisiert.",
@@ -1694,7 +1694,7 @@
 	"Update and Copy Link": "Aktualisieren und Link kopieren",
 	"Update for the latest features and improvements.": "Aktualisieren Sie für die neuesten Funktionen und Verbesserungen.",
 	"Update password": "Passwort aktualisieren",
-	"Update your status": "",
+	"Update your status": "Aktualisiere deinen Status",
 	"Updated": "Aktualisiert",
 	"Updated at": "Aktualisiert am",
 	"Updated At": "Aktualisiert am",
@@ -1748,7 +1748,7 @@
 	"View Replies": "Antworten anzeigen",
 	"View Result from **{{NAME}}**": "Ergebnis von **{{NAME}}** anzeigen",
 	"Visibility": "Sichtbarkeit",
-	"Visible to all users": "",
+	"Visible to all users": "Sichtbar für alle Nutzer",
 	"Vision": "Bilderkennung",
 	"Voice": "Stimme",
 	"Voice Input": "Spracheingabe",
@@ -1776,7 +1776,7 @@
 	"What are you trying to achieve?": "Was versuchen Sie zu erreichen?",
 	"What are you working on?": "Woran arbeiten Sie?",
 	"What's New in": "Neuigkeiten von",
-	"What's on your mind?": "",
+	"What's on your mind?": "Was beschäftigt Sie gerade?",
 	"When enabled, the model will respond to each chat message in real-time, generating a response as soon as the user sends a message. This mode is useful for live chat applications, but may impact performance on slower hardware.": "Wenn aktiviert, antwortet das Modell in Echtzeit auf jede Chat-Nachricht und generiert eine Antwort, sobald der Benutzer eine Nachricht sendet. Dieser Modus ist nützlich für Live-Chat-Anwendungen, kann jedoch die Leistung auf langsamerer Hardware beeinträchtigen.",
 	"wherever you are": "wo immer Sie sind",
 	"Whether to paginate the output. Each page will be separated by a horizontal rule and page number. Defaults to False.": "Ob die Ausgabe paginiert werden soll. Jede Seite wird durch eine horizontale Linie und eine Seitenzahl getrennt. Standardmäßig deaktiviert.",
